deployment/kubs/infrastructure/emqx/emqx.load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: emqx
spec:
  type: LoadBalancer
  selector:
    app: emqx
  ports:
    - name: mqtt
      port: 1883
      targetPort: 1883
      protocol: TCP
    - name: ws-mqtt
      port: 8083
      targetPort: 8083
      protocol: TCP
    - name: mqtts
      port: 8883
      targetPort: 8883
      protocol: TCP
    - name: dashboard
      port: 18083
      targetPort: 18083
      protocol: TCP
