deployment/kubs/infrastructure/emqx/emqx.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-ingress
spec:
  rules:
    - host: emqx1.${HOST}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: emqx
                port:
                  number: 18083
